Fix code smells
Signed-off-by: RALAMBOTIANA MIORA <miora.ralambotiana@rte-france.com>